[package]
name = "trustlink"
version = "0.1.0"
edition = "2021"
license = "MIT"
autobenches = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.0.1"

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
proptest = { version = "1.5.0", default-features = false, features = ["std"] }

[[test]]
name = "performance"
path = "benches/performance.rs"
harness = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
